# thirty-cent-synth

./: .gitignore  README.md  pyproject.toml
tcs/: __init__.py  __main__.py  instructions.py  notes.py  translate.py
